Basic site for production

--- a/partials/about.html
+++ b/partials/about.html
@@ -1,5 +1,15 @@
-<div class="jumbotron text-center">
-    <h1>About Page</h1>
-
-    <p>{{ message }}</p>
+<div class="wrap">
+    <h2 class="fadeIn white">What I Do:</h2>
+    <p>I'm a Fall 2014 graduate of Startup Institute Boston. I'm currently looking for a
+     Software Development role either here in Boston or abroad. <br>
+     My skills include:
+     <ul>
+        <li>Ruby on Rails</li>
+        <li>SQL</li>
+        <li>Javascript</li>
+        <li>HTML/CSS</li>
+        <li>Git</li>
+        <li>C#</li>
+     </ul>
+     </p>
 </div>
