--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,5 +1,6 @@
-<div class="jumbotron text-center">
-    <h1>Contact Page</h1>
-
-    <p>{{ message }}</p>
+<div class="wrap">
+    <h1 class="fadeIn">Lets talk!</h1>
+    <h2><a href="mailto:neillnsilva@gmail.com">neillnsilva@gmail.com</a></h2>
+    <p>Want to get in touch? E-mail me! I read every e-mail, I promise.
+     If you connect with me on LinkedIn, make sure to include a personal note. </p>
 </div>
