--- a/partials/home.html
+++ b/partials/home.html
@@ -2,5 +2,5 @@
     <h2><span class="listspan slide slide1">I'm Neill.</span></h2>
     <h4><span class="listspan slide slide2">I'm a Software Developer.</span></h4>
     <h4><span class="listspan slide slide3">I'm from Boston, MA</span></h4>
-    <h4><span class="listspan slide slide4">I just graduated from Startup Institute.</span></h4>
+    <h4><span class="listspan slide slide4">I am a Startup Institute alumni.</span></h4>
 </div>
