--- a/partials/about.html
+++ b/partials/about.html
@@ -1,4 +1,4 @@
-<div class="wrap">
+<div class="wrap content">
     <h2 class="fadeIn white">What I Do:</h2>
     <p>I'm a Fall 2014 graduate of Startup Institute Boston. I'm currently looking for a
      Software Development role either here in Boston or abroad. <br>
