--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,4 +1,4 @@
-<div class="wrap">
+<div class="wrap content">
     <h1 class="fadeIn">Lets talk!</h1>
     <h2><a href="mailto:neillnsilva@gmail.com">neillnsilva@gmail.com</a></h2>
     <p>Want to get in touch? E-mail me! I read every e-mail, I promise.
