--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -15,13 +15,8 @@ body {
 }
 
 .wrap {
-    color: #000;
     max-width: 400px;
-    max-height: 100%;
     min-width: 200px;
-    min-height: 500px;
-    overflow: hidden;
-    overflow-y: auto;
     width: 100%;
     line-height: 2;
     padding: 0px 10px 10px;
@@ -37,24 +32,19 @@ body {
     -o-transform: translateX(-50%) translateY(-50%);
 }
 
+.content {
+    color: #000;
+    max-height: 100%;
+    overflow: hidden;
+    overflow-y: auto;
+    min-height: 500px;
+}
+
 .bottomnav {
     color: #fff;
     display: table-cell;
-    max-width: 400px;
-    min-width: 200px;
-    width: 100%;
-    line-height: 2;
-    padding: 0px 10px 10px;
-    margin-top: 10px;
-    position: absolute;
     top: 65%;
     left: 50%;
-    text-align: center;
-    letter-spacing: 1pt;
-    transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -o-transform: translateX(-50%) translateY(-50%);
 }
 
 .ftobj {
@@ -93,6 +83,10 @@ li {
     float:left;
     width:50%;
     color: #fff;
+}
+
+a {
+    color: #22A7F0;
 }
 
 .white {
