--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -15,11 +15,11 @@ body {
 }
 
 .wrap {
-    max-width: 400px;
+    max-width: 450px;
     min-width: 200px;
     width: 100%;
     line-height: 2;
-    padding: 0px 10px 10px;
+    padding: 0;
     margin-top: 10px;
     position: absolute;
     top: 50%;
@@ -54,15 +54,21 @@ body {
 }
 
 .ftobj2 {
-    display: inline;
-    margin-right: 10px;
-    margin-top: 2px;
-    margin-bottom: 0;
-    display: block;
+    display: inline-block;
+    margin: 6px 0 0 15px;
     float: right;
     font-size: 15px;
     font-style: bold;
     vertical-align: center;
+}
+
+.ftobj2 .link {
+    background: rgb(34, 167, 240);
+    border: 0 solid transparent;
+    border-radius: 5px;
+    color: #fff;
+    margin: 0 -2px;
+    padding: 9px 15px;
 }
 
 p {
@@ -216,6 +222,8 @@ a {
     animation-duration: 1.1s;
     -webkit-animation-duration: 1.1s;
 }
+
+
 
 @keyframes expandUp {
     0% {
